# xybrid

./: .gitignore  .gitmodules  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE_2.md  NOTICE  README-full.md  README-minimal.md  README.md  RUST_GUIDE.md  SECURITY.md  justfile
bindings/flutter/rust/: Cargo.toml  cargokit.yaml
bindings/flutter/rust/src/: frb_generated.rs  lib.rs
bindings/xybrid-flutter/rust/: Cargo.toml  build.rs
bindings/xybrid-flutter/rust/src/: frb_generated.rs
cli/: Cargo.toml  README.md
cli/examples/: hiiipe.yaml  llm-tts.yaml  policy.yaml  wav2vec2-single.yaml  wav2vec2-test.yaml
cli/src/: main.rs  tracing_viz.rs
cli/src/commands/: utils.rs
core/: BENCHMARKS.md  BUNDLE.md  CODEBASE_EVALUATION.md  Cargo.toml  README.md  build.rs
core/benches/: inference_backends.rs
core/examples/: README.md  asr_whisper.rs  authority_demo.rs  candle_whisper.rs  candle_whisper_bundle.rs  cloud_llm_demo.rs  hiiipe.rs  llama_cpp_test.rs  local_llm_gemma3.rs  local_llm_qwen.rs  metadata_validation.rs  mnist_simple_mode.rs  mobilenetv2_imagenet.rs  registry_demo.rs  resnet50_imagenet.rs  sentence_embedding.rs  sentence_similarity.rs  streaming_asr.rs  streaming_llm.rs  tts_kitten.rs  tts_kokoro.rs  tts_kokoro_misaki.rs  tts_onnx_ kitten.rs  tts_onnx_kitten.rs  tts_xybrid.rs  vad_demo.rs  voice_assistant_demo.rs  wav2vec2_transcription.rs
core/src/: EXECUTION_LAYERS.md  bundler.rs  cache_provider.rs  context.rs  control_sync.rs  device_adapter.rs  error.rs  event_bus.rs  execution_template.rs  executor.rs  lib.rs  orchestrator.rs  phonemizer.rs  pipeline_config.rs  prelude.rs  registry.rs  registry_config.rs  registry_index.rs  registry_remote.rs  registry_resolver.rs  routing_engine.rs  stage_resolver.rs  stream_manager.rs  target.rs  template_executor.rs  tracing.rs
core/src/audio/: convert.rs  envelope.rs  format.rs  mod.rs  vad.rs
core/src/audio/mel/: htk.rs  mod.rs  slaney.rs  whisper.rs
core/src/cloud/: client.rs  error.rs  mod.rs
core/src/cloud_llm/: client.rs  error.rs  mod.rs  request.rs  response.rs
core/src/device/: android.rs  capabilities.rs  mod.rs
core/src/execution/: executor.rs  mod.rs
core/src/execution/modes/: autoregressive.rs  bert.rs  single_shot.rs  tts.rs  whisper.rs
core/src/execution/postprocessing/: mod.rs  tensor_ops.rs
core/src/execution/preprocessing/: audio.rs  mod.rs  text.rs
core/src/execution/strategies/: llm.rs  mod.rs  standard.rs  tts.rs
core/src/execution/template/: voice.rs
core/src/gateway/: config.rs  error.rs  mod.rs  models.rs
core/src/http/: circuit_breaker.rs  mod.rs  retry.rs
core/src/ir/: envelope.rs
core/src/llm/: client.rs  completion.rs  config.rs  error.rs  mod.rs
core/src/orchestrator/: bootstrap.rs  policy_engine.rs  routing_engine.rs
core/src/orchestrator/authority/: local.rs  mod.rs  remote.rs  types.rs
core/src/pipeline/: condition.rs  config.rs  input.rs  resolver.rs  runner.rs  stage.rs  target.rs
core/src/preprocessing/: mel_spectrogram.rs  mod.rs
core/src/registry/: index.rs  local.rs  mod.rs  remote.rs  resolver.rs
core/src/runtime_adapter/: README.md  inference_backend.rs  llm.rs  mel_spectrogram.rs  metadata_driven.rs  mod.rs  tensor_utils.rs  traits.rs  tts.rs
core/src/runtime_adapter/candle/: adapter.rs  backend.rs  device.rs  mod.rs  model.rs  runtime.rs  whisper.rs
core/src/runtime_adapter/cloud/: mod.rs
core/src/runtime_adapter/coreml/: adapter.rs  mod.rs
core/src/runtime_adapter/llama_cpp/: mod.rs  sys.rs
core/src/runtime_adapter/llm/: adapter.rs  backend.rs  config.rs  mistral.rs  mod.rs
core/src/runtime_adapter/mistral/: mod.rs
core/src/runtime_adapter/onnx/: README.md  adapter.rs  backend.rs  execution_provider.rs  mobile.rs  mod.rs  (+2 more)
core/src/streaming/: audio_buffer.rs  manager.rs  mod.rs  session.rs
core/src/telemetry/: events.rs  mod.rs  session.rs
core/src/template_executor/: executor.rs  executor_impl.rs  mod.rs  types.rs
core/src/testing/: mocks.rs  mod.rs  model_fixtures.rs
core/src/tts/: engine.rs  error.rs  mod.rs  request.rs  response.rs  voice_embedding.rs
core/src/universal/: mod.rs
core/tests/: integration_hiiipe.rs  pipeline_yaml_integration.rs  registry_integration.rs  system_validation.rs  tts_integration.rs
crates/xybrid-cli/: Cargo.toml
crates/xybrid-cli/examples/: hiiipe.yaml  llm-single.yaml  wav2vec2-single.yaml
crates/xybrid-cli/src/: main.rs  tracing_viz.rs
crates/xybrid-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/xybrid-ffi/include/: xybrid.h
crates/xybrid-ffi/src/: lib.rs
crates/xybrid-sdk/: Cargo.toml
crates/xybrid-sdk/examples/: llm_to_tts_pipeline.rs  simple_pipeline.rs  telemetry_test.rs
crates/xybrid-sdk/src/: benchmark.rs  lib.rs  llm.rs  model.rs  platform.rs  registry_client.rs  stream.rs  telemetry.rs
crates/xybrid-sdk/tests/: async_test.rs
crates/xybrid-uniffi/: Cargo.toml  uniffi-bindgen.rs
crates/xybrid-uniffi/src/: lib.rs
integration-tests/: .gitignore  Cargo.toml  README.md  download.sh  justfile
integration-tests/fixtures/input/: my_voice.m4a  sample.txt  test_audio.aiff
integration-tests/fixtures/models/: .gitignore  models.json
integration-tests/fixtures/pipelines/: asr_llm_tts.yaml  asr_pipeline.yaml  llm-gemma.yaml  llm-mistral-7b.yaml  llm-qwen-smollm2-360m.yaml  llm.yaml  simple_integration.yaml  tts_pipeline.yaml  va_local.yaml
integration-tests/src/: fixtures.rs
integration-tests/tests/: asr_integration.rs  integration_check.rs  llm_chat_template.rs  local_llm.rs  tts_integration.rs
registry/: .gitignore  Cargo.toml  README.md  example_pipeline.yaml  justfile
registry/bundles/: bundles.json
sdk/: Cargo.toml  README.md
sdk/examples/: llm_to_tts_pipeline.rs  macro_demo.rs  single_model_inference.rs  telemetry_test.rs
sdk/src/: cache.rs  cache_provider.rs  lib.rs  model.rs  pipeline.rs  registry_client.rs  result.rs  source.rs  stream.rs  telemetry.rs
sdk/src/cache/: cache_manager.rs  cache_provider.rs
sdk/tests/: macro_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs  setup_env.rs
(+506 files in other folders)
