[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "sdk",
    "macros",
    "registry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xybrid-ai/xybrid"
homepage = "https://github.com/xybrid-ai/xybrid"
documentation = "https://docs.rs/xybrid-core"

[workspace.dependencies]
# Internal crates
xybrid-core = { path = "core" }
xybrid-cli = { path = "cli" }
xybrid-sdk = { path = "sdk" }
xybrid-macros = { path = "macros" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }
