[workspace]
resolver = "2"
members = [
    "crates/xybrid-core",
    "crates/xybrid-sdk",
    "crates/xybrid-cli",
    "crates/xybrid-uniffi",
    "crates/xybrid-ffi",
    "bindings/flutter/rust",
    "macros",
    "xtask",
    "integration-tests",
]

[workspace.package]
version = "0.1.0-alpha3-rc1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/xybrid-ai/xybrid"
homepage = "https://github.com/xybrid-ai/xybrid"
documentation = "https://docs.rs/xybrid-core"

[workspace.dependencies]
# Internal crates
xybrid-core = { path = "crates/xybrid-core" }
xybrid-cli = { path = "crates/xybrid-cli" }
xybrid-sdk = { path = "crates/xybrid-sdk" }
xybrid-macros = { path = "macros" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }
