[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
# Local LLM inference (GGUF models via mistral.rs)
local-llm = ["xybrid-core/local-llm"]
local-llm-metal = ["xybrid-core/local-llm-metal"]
local-llm-cuda = ["xybrid-core/local-llm-cuda"]

[dependencies]
xybrid-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"

[dev-dependencies]
