[package]
name = "registry"
version = "0.1.0"
edition = "2021"
description = "Xybrid Registry Server - Serves model bundles for local development and testing"

[[bin]]
name = "registry-server"
path = "src/bin/server.rs"

[[bin]]
name = "create-bundles"
path = "src/bin/create_bundles.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xybrid-core = { path = "../core" }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
dirs = "5.0"
