[package]
name = "xybrid-sdk"
version = "0.0.1"
edition = "2021"

[lib]
name = "xybrid_sdk"
path = "src/lib.rs"

[dependencies]
# xybrid-core is defined per-target below to support Android's ort-load-dynamic requirement
xybrid-macros = { path = "../macros" }
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "fs", "time"] }
tempfile = "3.10"
# ureq is configured per-platform below for Android compatibility
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
dirs = "5.0"
sha2 = "0.10"

# Platform-specific xybrid-core dependencies
# Android: ort-dynamic (loads .so at runtime from AAR)
# iOS: No ort (prebuilt binaries not available), uses Candle with Metal
# Other platforms: Default features (download-binaries)

[target.'cfg(target_os = "android")'.dependencies]
# Android: ort-dynamic + llama.cpp for LLM (mistral.rs has +fp16 SIGILL issues on Android)
xybrid-core = { path = "../core", default-features = false, features = ["ort-dynamic", "llm-llamacpp"] }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }
# Force rustls to use ring crypto backend instead of aws-lc-rs (uses getentropy unavailable on API 24)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[target.'cfg(target_os = "ios")'.dependencies]
xybrid-core = { path = "../core", default-features = false, features = ["candle-metal"] }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios")))'.dependencies]
xybrid-core = { path = "../core" }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }

# Feature flags
[features]
default = []

# Local LLM inference
llm-mistral = ["xybrid-core/llm-mistral"]              # mistral.rs (CPU)
llm-mistral-metal = ["xybrid-core/llm-mistral-metal"]  # mistral.rs + Metal (macOS)
llm-mistral-cuda = ["xybrid-core/llm-mistral-cuda"]    # mistral.rs + CUDA (NVIDIA)
llm-llamacpp = ["xybrid-core/llm-llamacpp"]            # llama.cpp (Android-compatible)

# Re-export the macro
[package.metadata.docs.rs]
all-features = true

