[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
dunce = "1.0"
fs_extra = "1.3"
clap = { version = "4.4", features = ["derive"] }
