[package]
name = "xybrid-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xybrid"
path = "src/main.rs"

[features]
default = []
# LLM backend features (forwarded to xybrid-core)
llm-llamacpp = ["xybrid-core/llm-llamacpp", "xybrid-sdk/llm-llamacpp"]
llm-mistral = ["xybrid-core/llm-mistral", "xybrid-sdk/llm-mistral"]

[dependencies]
xybrid-core = { path = "../xybrid-core" }
xybrid-sdk = { path = "../xybrid-sdk" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
sha2 = "0.10"
colored = "2.1"
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
hostname = "0.4"
# CLI UI
indicatif = "0.17"
console = "0.15"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-flame = "0.2"

