[package]
name = "xybrid-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xybrid"
path = "src/main.rs"

[features]
default = []

# PLATFORM PRESETS (forwarded from xybrid-sdk)
platform-android = ["xybrid-sdk/platform-android"]
platform-ios = ["xybrid-sdk/platform-ios"]
platform-macos = ["xybrid-sdk/platform-macos"]
platform-desktop = ["xybrid-sdk/platform-desktop"]

# INDIVIDUAL FEATURE FORWARDING (for custom builds)

# ONNX Runtime Execution Providers
ort-download = ["xybrid-sdk/ort-download"]
ort-dynamic = ["xybrid-sdk/ort-dynamic"]
ort-coreml = ["xybrid-sdk/ort-coreml"]

# Candle (Pure Rust ML)
candle = ["xybrid-sdk/candle"]
candle-metal = ["xybrid-sdk/candle-metal"]
candle-cuda = ["xybrid-sdk/candle-cuda"]

# Local LLM inference
llm-mistral = ["xybrid-sdk/llm-mistral"]
llm-mistral-metal = ["xybrid-sdk/llm-mistral-metal"]
llm-mistral-cuda = ["xybrid-sdk/llm-mistral-cuda"]
llm-llamacpp = ["xybrid-sdk/llm-llamacpp"]

[dependencies]
xybrid-core = { path = "../xybrid-core", default-features = false }
xybrid-sdk = { path = "../xybrid-sdk", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
sha2 = "0.10"
colored = "2.1"
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
hostname = "0.4"
# CLI UI
indicatif = "0.17"
console = "0.15"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-flame = "0.2"

