[package]
name = "xybrid-ffi"
version.workspace = true
edition.workspace = true
description = "C ABI FFI bindings for xybrid-sdk (Unity, C/C++ consumers)"

[lib]
name = "xybrid_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
serde_json = "1.0"
xybrid-sdk = { path = "../xybrid-sdk", default-features = false }

[build-dependencies]
cbindgen = "0.26"
csbindgen = "1.9"

[features]
default = []
# Generate C# bindings (for Unity)
csharp = []

# PLATFORM PRESETS (forwarded from xybrid-sdk)
platform-android = ["xybrid-sdk/platform-android"]
platform-ios = ["xybrid-sdk/platform-ios"]
platform-macos = ["xybrid-sdk/platform-macos"]
platform-desktop = ["xybrid-sdk/platform-desktop"]

# INDIVIDUAL FEATURE FORWARDING (for custom builds)
ort-download = ["xybrid-sdk/ort-download"]
ort-dynamic = ["xybrid-sdk/ort-dynamic"]
ort-coreml = ["xybrid-sdk/ort-coreml"]
candle = ["xybrid-sdk/candle"]
candle-metal = ["xybrid-sdk/candle-metal"]
candle-cuda = ["xybrid-sdk/candle-cuda"]
llm-mistral = ["xybrid-sdk/llm-mistral"]
llm-mistral-metal = ["xybrid-sdk/llm-mistral-metal"]
llm-mistral-cuda = ["xybrid-sdk/llm-mistral-cuda"]
llm-llamacpp = ["xybrid-sdk/llm-llamacpp"]
