[package]
name = "xybrid-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "xybrid_sdk"
path = "src/lib.rs"

[dependencies]
# Base xybrid-core dependency (features selected via platform presets)
xybrid-core = { path = "../xybrid-core", default-features = false }
xybrid-macros = { path = "../../macros" }
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "fs", "time"] }
tokio-stream = "0.1"
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
dirs = "5.0"
sha2 = "0.10"

# Platform-specific dependencies (NOT features - those are in presets)
# Android: rustls with ring backend (aws-lc-rs uses getentropy unavailable on API 24)
[target.'cfg(target_os = "android")'.dependencies]
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }

[features]
default = []

# PLATFORM PRESETS (SINGLE SOURCE OF TRUTH)

# Android: Dynamic ORT loading + llama.cpp (mistral.rs has SIGILL issues on ARM)
platform-android = ["xybrid-core/ort-dynamic", "xybrid-core/llm-llamacpp"]

# iOS: CoreML + Metal acceleration + llama.cpp
platform-ios = ["xybrid-core/ort-download", "xybrid-core/ort-coreml", "xybrid-core/candle-metal", "xybrid-core/llm-llamacpp"]

# macOS: CoreML + Metal + llama.cpp
platform-macos = ["xybrid-core/ort-download", "xybrid-core/ort-coreml", "xybrid-core/candle-metal", "xybrid-core/llm-llamacpp"]

# Desktop (Linux/Windows): CPU with mistral.rs + llama.cpp
platform-desktop = ["xybrid-core/ort-download", "xybrid-core/llm-mistral", "xybrid-core/llm-llamacpp"]

# INDIVIDUAL FEATURE FORWARDING (for custom builds)

# ONNX Runtime Execution Providers
ort-download = ["xybrid-core/ort-download"]
ort-dynamic = ["xybrid-core/ort-dynamic"]
ort-coreml = ["xybrid-core/ort-coreml"]

# Candle (Pure Rust ML)
candle = ["xybrid-core/candle"]
candle-metal = ["xybrid-core/candle-metal"]
candle-cuda = ["xybrid-core/candle-cuda"]

# Local LLM inference
llm-mistral = ["xybrid-core/llm-mistral"]
llm-mistral-metal = ["xybrid-core/llm-mistral-metal"]
llm-mistral-cuda = ["xybrid-core/llm-mistral-cuda"]
llm-llamacpp = ["xybrid-core/llm-llamacpp"]

# Re-export the macro
[package.metadata.docs.rs]
all-features = true

