[package]
name = "xybrid-uniffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for xybrid-sdk (Swift/Kotlin)"

[lib]
name = "xybrid_uniffi"
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.25", features = ["cli"] }
xybrid-sdk = { path = "../xybrid-sdk" }
