[package]
name = "xybrid_flutter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "xybrid_flutter_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
# Base dependencies - features selected via platform presets below
xybrid-sdk = { path = "../../../crates/xybrid-sdk", default-features = false }
xybrid-core = { path = "../../../crates/xybrid-core", default-features = false }

# Async runtime for streaming
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"

# Logging (optional - for debugging)
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
# SDK preset handles: ort-dynamic, llm-llamacpp
xybrid-sdk = { path = "../../../crates/xybrid-sdk", default-features = false, features = ["platform-android"] }
# Direct ort dependency for Android initialization (loads .so at runtime)
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"
# SDK preset handles: ort-download, ort-coreml, candle-metal, llm-llamacpp
xybrid-sdk = { path = "../../../crates/xybrid-sdk", default-features = false, features = ["platform-ios"] }
# Direct ort dependency - links against custom xcframework with CoreML
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "std", "coreml"] }

[target.'cfg(target_os = "macos")'.dependencies]
# SDK preset handles: ort-download, ort-coreml, candle-metal, llm-llamacpp
xybrid-sdk = { path = "../../../crates/xybrid-sdk", features = ["platform-macos"] }

[target.'cfg(target_os = "linux")'.dependencies]
# SDK preset handles: ort-download, llm-mistral, llm-llamacpp
xybrid-sdk = { path = "../../../crates/xybrid-sdk", features = ["platform-desktop"] }

[target.'cfg(target_os = "windows")'.dependencies]
# SDK preset handles: ort-download, llm-mistral, llm-llamacpp
xybrid-sdk = { path = "../../../crates/xybrid-sdk", features = ["platform-desktop"] }

[features]
default = []

# PLATFORM PRESETS (forwarded from xybrid-sdk)
platform-android = ["xybrid-sdk/platform-android"]
platform-ios = ["xybrid-sdk/platform-ios"]
platform-macos = ["xybrid-sdk/platform-macos"]
platform-desktop = ["xybrid-sdk/platform-desktop"]

# INDIVIDUAL FEATURE FORWARDING (for custom builds)
ort-download = ["xybrid-sdk/ort-download"]
ort-dynamic = ["xybrid-sdk/ort-dynamic"]
ort-coreml = ["xybrid-sdk/ort-coreml"]
candle = ["xybrid-sdk/candle"]
candle-metal = ["xybrid-sdk/candle-metal"]
candle-cuda = ["xybrid-sdk/candle-cuda"]
llm-mistral = ["xybrid-sdk/llm-mistral"]
llm-mistral-metal = ["xybrid-sdk/llm-mistral-metal"]
llm-mistral-cuda = ["xybrid-sdk/llm-mistral-cuda"]
llm-llamacpp = ["xybrid-sdk/llm-llamacpp"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
